# rag-memory-plugin

./: .gitignore  MIGRATION.md  README.md  VENV_MIGRATION_COMPLETE.md  install.sh  migrate_to_new_venv.sh  pyproject.toml
.github/workflows/: ci.yml  weekly.yml
.lint-venv/: pyvenv.cfg
docs/: AUTO_CAPTURE_VERIFIED.md  COMPLETE_IMPLEMENTATION.md  DEPLOYMENT_COMPLETE.md  FILE_INDEXING_IMPLEMENTED.md  FILE_INDEXING_SUMMARY.md  IMPLEMENTATION_PROGRESS.md  PERFORMANCE_TEST_RESULTS.md  PHASE4_COMPLETE.md  PHASE5_COMPLETE.md  PHASE6_COMPLETE.md  PUBLISHING.md  PYPI_PUBLISHING_GUIDE.md  PYPI_PUBLISHING_OPTIONS.md  PYPI_STATUS.md  REPOSITORY_CLEANUP.md  TESTING_COMPLETE.md  TESTPYPI_ISSUE_SUMMARY.md  TESTPYPI_PUBLISHING.md  TEST_SUMMARY.md
src/rag_memory/: cli.py  cli_extended.py  cli_priority3.py  plugin.py
src/rag_memory/core/: __init__.py  auto_capture.py  cache.py  cron_integration.py  file_indexing.py  indexing.py.old  namespace.py  rag_core.py  rag_core_neural.py  rag_core_tfidf_backup.py
src/rag_memory/scripts/: migrate_legacy.py
src/rag_memory/tools/: __init__.py  handlers.py  schemas.py
