[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-memory-plugin"
version = "1.0.0"
description = "Production-grade RAG memory system for Hermes Agent with hybrid TF-IDF + Neural retrieval, auto-capture, and zero-configuration setup"
authors = [{name = "Clawford Orji"}]
requires-python = ">=3.10"
license = {text = "MIT"}
readme = "README.md"
keywords = ["rag", "retrieval", "memory", "hermes", "agent", "neural-search", "tfidf"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]

dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "click>=8.0",
    "rich>=13.0",
    "sqlite-vec>=0.1.0",
    "scikit-learn>=0.24.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
neural = [
    "sentence-transformers>=2.2.0",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "mypy>=1.8",
]
all = ["rag-memory-plugin[neural,dev]"]

[project.scripts]
rag-memory = "rag_memory.cli:main"

[project.entry-points."hermes_agent.plugins"]
rag-memory = "rag_memory.plugin"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["LICENSE"]

[tool.ruff]
target-version = "py310"
line-length = 120
exclude = ["tests/fixtures/"]

[tool.ruff.lint]
per-file-ignores = {"src/rag_memory/cli.py" = ["E402"]}

[tool.isort]
profile = "black"
line_length = 120
skip = [".git", ".venv", "venv", ".eggs"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
